--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,5 +26,5 @@
     </section>
 
 <footer id="site-footer">
-Made by <a href="#" target="_blank"><p>Harman</p></a>
+Made by <a href="#" target="_blank"><p>&copy 2018 Harman</p></a>
 </footer>
