--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
     <div id="content" class="container">
         <header id="content-header">
             <div id="price-container">
-              <span class="glyphicon glyphicon-tag"></span><span class="price">$9.99</span>
+              <span class="glyphicon glyphicon-tag"></span><span class="price">$19.99</span>
             </div>
-            <%= image_tag('header-image.jpg',id: "content-head-img", alt:"book")%>
+            <%= image_tag('header-image1.jpg',id: "content-head-img", alt:"book", style:"width:350px;")%>
           </header>
     <%= yield %>
   </div>
